fix: fix gap in pets-group main page

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -781,7 +781,7 @@ a {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    gap: 5%;
+    gap: 40px;
     max-width: 630px;
   }
 
